flapivor/tests/m3/hopix/typechecker/good/53-read.hopix
val x : Ref<Int> = ref (0)

val main : Int =
    !x