flapivor/tests/m3/hopix/typechecker/bad/11-invalid-arithmetic-comparison-03.hopix
val main : Int = 0 <=? ""